--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.14.0",
     "semver": "^7.5.3",
     "sort-by": "^0.0.2"
